--- a/package.json
+++ b/package.json
@@ -18,13 +18,23 @@
   },
   "homepage": "https://github.com/gonzalo-diamend/WebdriverIO#readme",
   "devDependencies": {
+    "@babel/core": "^7.10.4",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/register": "^7.10.4",
     "@wdio/cli": "^6.1.23",
     "@wdio/cucumber-framework": "^6.1.22",
     "@wdio/local-runner": "^6.1.23",
     "@wdio/mocha-framework": "^6.1.19",
+    "@wdio/selenium-standalone-service": "^6.1.14",
     "@wdio/spec-reporter": "^6.1.23",
     "@wdio/sync": "^6.1.14",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
     "chromedriver": "^83.0.0",
     "wdio-chromedriver-service": "^6.0.3"
+  },
+  "dependencies": {
+    "@types/cucumber": "^6.0.1"
   }
 }
